# slope

./: CMakeLists.txt  README.md  template_project.cpp
.github/workflows/: cmake.yml
cmake/: fmt.cmake  geometry-central.cmake  polyscope.cmake
src/: PCH.h  libslope.h  old.cpp  pch.hpp  slope.h
src/content/: Anchor.cpp  Anchor.h  Curve3D.cpp  Curve3D.h  ImGuiWidgets.cpp  ImGuiWidgets.h  Image.cpp  Image.h  LateX.cpp  LateX.h  LateXMacros.h  Mesh.cpp  Mesh.h  Options.cpp.in  Options.h  PersistantQuantity.cpp  PersistantQuantity.h  PersistentQuantity.cpp  PersistentQuantity.h  Placement.cpp  Point.cpp  Point.h  PolyscopePrimitive.cpp  PolyscopePrimitive.h  PrimitiveGroup.h  Referential.cpp  Referential.h  ScreenPrimitive.cpp  ScreenPrimitive.h  StateInSlide.h  TimeObject.h  Transform.h  VolumeGrid.cpp  VolumeGrid.h  color_tools.cpp  color_tools.h  io.h  primitive.cpp  primitive.h  transitions.cpp  (+1 more)
src/content/polyscope_primitives/: BackgroundColor.cpp  BackgroundColor.h  CameraView.cpp  CameraView.h  Curve3D.cpp  Curve3D.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PolyscopePrimitive.cpp  PolyscopePrimitive.h  Transform.h  VolumeGrid.cpp  vector_field.cpp  vector_field.h
src/content/screen_primitives/: Anchor.cpp  Anchor.h  Box.cpp  Box.h  Frame.cpp  Frame.h  ImGuiWidgets.cpp  ImGuiWidgets.h  Image.cpp  Image.h  LateX.cpp  LateX.h  LateXMacros.h  Placement.h  ScreenPrimitive.cpp  ScreenPrimitive.h  Sliders.cpp  Sliders.h  Text.cpp  Text.h
src/content/screen_primitives/Graphics2D/: Curve2D.cpp  Curve2D.h
src/content/screen_primitives/plots/: Plot.cpp  Plot.h
src/math/: geometry.h
src/slides/: CLI.cpp  CLI.h  Panel.cpp  Panel.h  Prompter.h  PrompterModule.cpp  PrompterModule.h  Slide.cpp  Slide.h  SlideManager.cpp  SlideManager.h  Slideshow.cpp  Slideshow.h  WindowManager.cpp  WindowManager.h  screenshot.cpp  screenshot.h
